# RustWebTemplate

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  start_dev.ps1  test_api.ps1  test_single_device_login.ps1  test_token_persistence.ps1  接口文档.md
examples/: redis_demo.rs  timezone_demo.rs  utils_demo.rs
migrations/: 001_create_users_table.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  redis.rs  routes.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  user.rs
src/services/: mod.rs  token_service.rs  user_service.rs
src/utils/: auth.rs  collection.rs  convert.rs  crypto.rs  device.rs  format.rs  mod.rs  number.rs  password.rs  redis.rs  string.rs  time.rs
