[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT 和密码加密
jsonwebtoken = "9.2"
argon2 = "0.5"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 环境变量
dotenvy = "0.15"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具库
regex = "1.10"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
url = "2.4"
mime = "0.3"
unicode-segmentation = "1.10"
